@@ -1,5 +1,8 @@
 2008-08-12  Albert Graef  <Dr.Graef@t-online.de>
 
+	* runtime.cc/h, lib/system.pure: Add 'trap' operation to configure
+	signal handlers.
+
 	* runtime.cc (pure_sys_vars): Add signal constants.
 
 	* pure.cc (main): Set up handlers for standard POSIX termination
